--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='建立個人網站.html'>建立個人網站</a></li></ul><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li><a href='W2.html'>W2</a><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -429,7 +429,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />Replit << <a href='Replit.html'>Previous</a> </div>
+</p>
+</div><br />Replit << <a href='Replit.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
