--- a/content/Codespaces.html
+++ b/content/Codespaces.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='建立個人網站.html'>建立個人網站</a></li></ul><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li><a href='W2.html'>W2</a><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,7 +145,8 @@ img.add_border {
     <div id="tipue_search_content">cmsimde << <a href='cmsimde.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>Codespaces</h1>
 <p><a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
 <p></p>
-<p></p><br />cmsimde << <a href='cmsimde.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
+<p></p>
+<br />cmsimde << <a href='cmsimde.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
 
     <!-- footer -->
       <div class="container">
