--- a/config/content.htm
+++ b/config/content.htm
@@ -1,14 +1,6 @@
-<h1>w1</h1>
+<h1>First</h1>
 <div>
-<div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
-</div>
-<div>
-<h2>登入 MS Online</h2>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div><h2>Github 帳號</h2>
-<div><span>自行建立 Github 帳號,用來建立並維護個人的課程倉儲與網站</span></div>
-<div>創建個人github及replite的個人帳號</div><h2>課後心得</h2>
-<p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
-<h1>W2</h1>
+<div></div>
 <h1>About</h1>
 <p>網頁: 請填入目前網站所在的 URL, <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
 <p>網誌: 請填入目前網站所在的 URL/blog, <a href="https://mde.tw/cmsimde_site/blog">https://mde.tw/cmsimde_site/blog</a></p>
@@ -18,6 +10,40 @@
 <p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
 <p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
 <p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
+<h1>課程內容及課後心得</h1>
+<h2>w1</h2>
+<div>
+<div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
+</div>
+<div>
+<h3>登入 MS Online</h3>
+<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
+<h3>Github 帳號</h3>
+<div><span>自行建立 Github 帳號,用來建立並維護個人的課程倉儲與網站</span></div>
+<div>創建個人github及replite的個人帳號</div>
+<h3>課後心得</h3>
+<p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
+<h2>W2</h2>
+<div>
+<div><span>四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.</span></div>
+<h3><span>確認已建立個人網站</span></h3>
+<div><span>1.登入 Github</span></div>
+<div>2.利用此連結 <a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a>  "Create a new repository" 建立名稱為WCM2024的倉儲。</div>
+<div><span>3.在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。</span></div>
+<div>4.等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 <a href="https://CYA41223106.github.io/wcm2024">https://CYA41223106.github.io/wcm2024</a> 的個人課程網站</div>
+<h3><span>利用Replit修改個人網站標題</span></h3>
+<div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
+<div><span>1.登入Replit</span></div>
+<div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
+<h3><span>利用 Codespaces 維護網站</span></h3>
+<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
+<div><span>能夠同時開啟靜態網站與動態網站</span></div>
+<h3><span>心得</span></h3>
+<div><span>W2的課程讓我學到很多新的東西以及複習舊知識</span></div>
+<div><span>新:能夠再Github中使用Codespace直接將動態網站上編輯好的東西push到靜態網站上，使用Codespace能夠同時查看到動態與靜態的變化，使我更加方便。</span></div>
+<div><span>舊:更改個人網站標題，在之前上學期的課程中有學習過</span></div>
+</div>
+</div>
 <h1>cmsimde</h1>
 <p><span style="background-color: #ccffcc;">SMap</span> - SiteMap - 依照階次列出網站的所有頁面.</p>
 <p><span style="background-color: #ccffcc;">EditA</span> - Edit All page - 將所有頁面放入編輯模式中, 主要用來處理頁面搬遷, 刪除或決定衝突頁面內容版本.</p>
