--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,7 +6,7 @@
 <h2>登入 MS Online</h2>
 <div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div><h2>Github 帳號</h2>
 <div><span>自行建立 Github 帳號,用來建立並維護個人的課程倉儲與網站</span></div>
-<p>創建個人github及replite的個人帳號</p><h2>課後心得</h2>
+<div>創建個人github及replite的個人帳號</div><h2>課後心得</h2>
 <p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
 <h1>W2</h1>
 <h1>About</h1>
