--- a/content/確認已建立個人網站.html
+++ b/content/確認已建立個人網站.html
@@ -142,9 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號<br /><h1>登入 MS Online</h1>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號</div>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='利用Replit修改個人網站標題.html'>Next</a> >> 利用Replit修改個人網站標題<br /><h1>確認已建立個人網站</h1>
+<div><span>1.登入 Github</span></div>
+<div>2.利用此連結 <a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a>  "Create a new repository" 建立名稱為WCM2024的倉儲。</div>
+<div><span>3.在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。</span></div>
+<div>4.等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 <a href="https://CYA41223106.github.io/wcm2024">https://CYA41223106.github.io/wcm2024</a> 的個人課程網站</div>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='利用Replit修改個人網站標題.html'>Next</a> >> 利用Replit修改個人網站標題</div>
 
     <!-- footer -->
       <div class="container">
