--- a/content/利用 Codespaces 維護網站.html
+++ b/content/利用 Codespaces 維護網站.html
@@ -142,9 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號<br /><h1>登入 MS Online</h1>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號</div>
+    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>利用 Codespaces 維護網站</h1>
+<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
+<div><span>能夠同時開啟靜態網站與動態網站</span></div>
+<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
 
     <!-- footer -->
       <div class="container">
