--- a/content/心得.html
+++ b/content/心得.html
@@ -142,9 +142,13 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號<br /><h1>登入 MS Online</h1>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號</div>
+    <div id="tipue_search_content">利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>心得</h1>
+<div><span>W2的課程讓我學到很多新的東西以及複習舊知識</span></div>
+<div><span>新:能夠再Github中使用Codespace直接將動態網站上編輯好的東西push到靜態網站上，使用Codespace能夠同時查看到動態與靜態的變化，使我更加方便。</span></div>
+<div><span>舊:更改個人網站標題，在之前上學期的課程中有學習過</span></div>
+</div>
+</div>
+<br />利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
