--- a/content/課程內容及課後心得.html
+++ b/content/課程內容及課後心得.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,9 +142,8 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號<br /><h1>登入 MS Online</h1>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='Github 帳號.html'>Next</a> >> Github 帳號</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>課程內容及課後心得</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
 
     <!-- footer -->
       <div class="container">
