add w3 blog page

--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,14 +143,14 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='課程內容及課後心得.html'>Next</a> >> 課程內容及課後心得<br /><h1>About</h1>
-<p>網頁: 請填入目前網站所在的 URL, <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
-<p>網誌: 請填入目前網站所在的 URL/blog, <a href="https://mde.tw/cmsimde_site/blog">https://mde.tw/cmsimde_site/blog</a></p>
+<p>網頁: 請填入目前網站所在的 URL, <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
+<p>網誌: 請填入目前網站所在的 URL/blog,  <a href="https://cya41223106.github.io/wcm2024/blog">https://cya41223106.github.io/wcm2024/blog</a></p>
 <p>簡報: 請填入目前網站所在的 URL/reveal, <a href="https://mde.tw/cmsimde_site/reveal">https://mde.tw/cmsimde_site/reveal</a></p>
 <p>倉儲: 請填入目前網站所對應的 Github 倉儲連結</p>
 <p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
+ <a href="https://github.com/CYA41223106/wcm2024">https://github.com/CYA41223106/wcm2024</a><br/>
 <p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
+<p style="padding-left: 30px;">倉儲對應網站: <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
 <br />First << <a href='First.html'>Previous</a> <a href='課程內容及課後心得.html'>Next</a> >> 課程內容及課後心得</div>
 
     <!-- footer -->
