--- a/content/w3.html
+++ b/content/w3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,10 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>First</h1>
+    <div id="tipue_search_content">利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='利用 Github Classroom 分組.html'>Next</a> >> 利用 Github Classroom 分組<br /><h1>w3</h1>
 <div>
-<div></div>
-<br /> <a href='About.html'>Next</a> >> About</div>
+<div><span>WCM2024第三週課程, 除了 Replit, Github Codespaces, Gitpod 之外, 還介紹如何利用可攜系統維護個人與分組網站</span></div>
+<br />利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='利用 Github Classroom 分組.html'>Next</a> >> 利用 Github Classroom 分組</div>
 
     <!-- footer -->
       <div class="container">
