--- a/content/利用 Github Codespaces 維護倉儲.html
+++ b/content/利用 Github Codespaces 維護倉儲.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,10 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>First</h1>
-<div>
-<div></div>
-<br /> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">利用 Github Classroom 分組 << <a href='利用 Github Classroom 分組.html'>Previous</a> <a href='常用的 git 指令.html'>Next</a> >> 常用的 git 指令<br /><h1>利用 Github Codespaces 維護倉儲</h1>
+<div><span>使用 Replit 管理分組網站, 必須採動態建立 .ssh 目錄中的私鑰與 config, 過程比較複雜, 但若採用 Github Codespaces, 則可以在登入 Github 帳號下, 管理該帳號所有授權的倉儲, 包括分組倉儲與網站</span></div>
+<br />利用 Github Classroom 分組 << <a href='利用 Github Classroom 分組.html'>Previous</a> <a href='常用的 git 指令.html'>Next</a> >> 常用的 git 指令</div>
 
     <!-- footer -->
       <div class="container">
