--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,23 +1,93 @@
-<h1>w1</h1>
+<h1>First</h1>
+<div>
+<div></div>
+<h1>About</h1>
+<p>網頁: 請填入目前網站所在的 URL, <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
+<p>網誌: 請填入目前網站所在的 URL/blog,  <a href="https://cya41223106.github.io/wcm2024/blog">https://cya41223106.github.io/wcm2024/blog</a></p>
+<p>簡報: 請填入目前網站所在的 URL/reveal, <a href="https://mde.tw/cmsimde_site/reveal">https://mde.tw/cmsimde_site/reveal</a></p>
+<p>倉儲: 請填入目前網站所對應的 Github 倉儲連結</p>
+<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
+ <a href="https://github.com/CYA41223106/wcm2024">https://github.com/CYA41223106/wcm2024</a><br/>
+<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
+<p style="padding-left: 30px;">倉儲對應網站: <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
+<h1>課程內容及課後心得</h1>
+<h2>w1</h2>
 <div>
 <div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
 </div>
 <div>
-<h2>登入 MS Online</h2>
-<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div><h2>Github 帳號</h2>
+<h3>登入 MS Online</h3>
+<div><span>上課時登入 MS Online的Team中, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作</span></div>
+<h3>Github 帳號</h3>
 <div><span>自行建立 Github 帳號,用來建立並維護個人的課程倉儲與網站</span></div>
-<div>創建個人github及replite的個人帳號</div><h2>課後心得</h2>
+<div>創建個人github及replite的個人帳號</div>
+<h3>課後心得</h3>
 <p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
-<h1>W2</h1>
-<h1>About</h1>
-<p>網頁: 請填入目前網站所在的 URL, <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
-<p>網誌: 請填入目前網站所在的 URL/blog, <a href="https://mde.tw/cmsimde_site/blog">https://mde.tw/cmsimde_site/blog</a></p>
-<p>簡報: 請填入目前網站所在的 URL/reveal, <a href="https://mde.tw/cmsimde_site/reveal">https://mde.tw/cmsimde_site/reveal</a></p>
-<p>倉儲: 請填入目前網站所對應的 Github 倉儲連結</p>
-<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
-<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
+<h2>W2</h2>
+<div>
+<div><span>四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.</span></div>
+<h3>確認已建立個人網站</h3>
+<div><span>1.登入 Github</span></div>
+<div>2.利用此連結 <a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a>  "Create a new repository" 建立名稱為WCM2024的倉儲。</div>
+<div><span>3.在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。</span></div>
+<div>4.等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 <a href="https://CYA41223106.github.io/wcm2024">https://CYA41223106.github.io/wcm2024</a> 的個人課程網站</div>
+<h3>利用Replit修改個人網站標題</h3>
+<div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
+<div><span>1.登入Replit</span></div>
+<div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
+<h3>利用 Codespaces 維護網站</h3>
+<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
+<div><span>能夠同時開啟靜態網站與動態網站</span></div>
+<h3>心得</h3>
+<div>
+<div><span>W3的課程學習到關於建立分組網站的操作以及利用上次所講的Codespaces來做分組網站的維護，建造分組網站後，需學習如何讓每個人都有權限去做帳號及內容管理，還有在程式中關於git的各種不同涵義的指令，在日後的內容新增及上傳的作用非常大。</span></div>
+</div>
+<div><span></span></div><h2>w3</h2>
+<div>
+<div><span>WCM2024第三週課程, 除了 Replit, Github Codespaces, Gitpod 之外, 還介紹如何利用可攜系統維護個人與分組網站</span></div>
+<h3>利用 Github Classroom 分組</h3>
+<div><span>本組作業名稱為5a,組長在取得作業連結之後,建立各組Team,本組共有6名組員,透過作業連結加入ag5 Team </span></div>
+<div><span></span></div>
+<div><span>完成ag5 Team 建立後, 將取得 mdewcm2024 帳號下的 1a-ag5 倉儲, 所有第五組的組員均對此分組倉儲有管理權, 可以使用登入 Github 的帳號權限進行改版</span></div>
+<br/>
+<div><span>必須動態在 /home/runner/.ssh 下建立 id_rsa 與 config 連線設定, 各組組員才能利用 Replit 管理分組網站內容</span></div>
+<h3>利用 Github Codespaces 維護倉儲</h3>
+<div><span>使用 Replit 管理分組網站, 必須採動態建立 .ssh 目錄中的私鑰與 config, 過程比較複雜, 但若採用 Github Codespaces, 則可以在登入 Github 帳號下, 管理該帳號所有授權的倉儲, 包括分組倉儲與網站</span></div>
+<h3>常用的 git 指令</h3>
+<div><span>git 的新增、提交與推送指令:</span></div>
+<br/>
+<div><span>git add . git commit -m "說明字串" git push</span></div>
+<br/>
+<div><span>使用 git add . 表示要認列所進行的全部改版內容, git commit -m 執行之前, 若在近端使用, 必須先行設定 git config, 將 home_ipv6 目錄下的 .gitconfig 中明確列出改版者的身分, 其中包括:</span></div>
+<br/>
+<div><span>git config --global user.name "提交者的 github 帳號名稱"</span></div>
+<br/>
+<div><span>git config --global user.email "提交者在 github 所登錄的 email address"</span></div>
+<br/>
+<div><span>使用者也可以利用 git version 查詢目前所使用的 git 版本.</span></div>
+<br/>
+<div><span>git status 通常用來查核目前近端的改版狀況, 例如: 是否與遠端倉儲同步, 或者遠端倉儲已經有了新版本.</span></div>
+<br/>
+<div><span>若遠端倉儲已經有新的版本, 則在 git push 之前, 必須設法取下遠端資料進行合併後, 才能再提交新的版本並推送到遠端.</span></div>
+<br/>
+<div><span>git pull = git fetch + git merge</span></div>
+<br/>
+<div><span>由於要將各組員的 wcm2024 設定為各分組倉儲的子模組, 因此必須利用 git submodule add 以各組員的學號作為子目錄名稱, 利用下列指令, 將組員倉儲新增為分組倉儲的子模組:</span></div>
+<br/>
+<div><span>git submodule add 倉儲網址 子目錄</span></div>
+<br/>
+<div><span>若只要取下倉儲的主要內容, 可以使用下列指令:</span></div>
+<br/>
+<div><span>git clone 倉儲網址_協定.git 指定目錄與否</span></div>
+<br/>
+<div><span>若要取下帶有子模組的倉儲, 且可能該子模組還有設定其他子模組, 則必須要加上 --recurse-submodules:</span></div>
+<br/>
+<div><span>git clone --recurse-submodules 倉儲網址_協定.git 指定目錄與否</span></div>
+<h3>心得</h3>
+<div><span>W3的課程學習到關於建立分組網站的操作以及利用上次所講的Codespaces來做分組網站的維護，建造分組網站後，需學習如何讓每個人都有權限去做帳號及內容管理，還有在程式中關於git的各種不同涵義的指令，在日後的內容新增及上傳的作用非常大。</span></div>
+</div>
+</div>
+</div>
 <h1>cmsimde</h1>
 <p><span style="background-color: #ccffcc;">SMap</span> - SiteMap - 依照階次列出網站的所有頁面.</p>
 <p><span style="background-color: #ccffcc;">EditA</span> - Edit All page - 將所有頁面放入編輯模式中, 主要用來處理頁面搬遷, 刪除或決定衝突頁面內容版本.</p>
