--- a/content/利用 Codespaces 維護網站.html
+++ b/content/利用 Codespaces 維護網站.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>利用 Codespaces 維護網站</h1>
+    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>利用 Codespaces 維護網站</h1>
 <div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
 <div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
+<div>
+<div><span></span></div>
+</div><br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
 
     <!-- footer -->
       <div class="container">
