--- a/content/利用 Github Classroom 分組.html
+++ b/content/利用 Github Classroom 分組.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,10 +142,13 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>First</h1>
-<div>
-<div></div>
-<br /> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='利用 Github Codespaces 維護倉儲.html'>Next</a> >> 利用 Github Codespaces 維護倉儲<br /><h1>利用 Github Classroom 分組</h1>
+<div><span>本組作業名稱為5a,組長在取得作業連結之後,建立各組Team,本組共有6名組員,透過作業連結加入ag5 Team </span></div>
+<div><span></span></div>
+<div><span>完成ag5 Team 建立後, 將取得 mdewcm2024 帳號下的 1a-ag5 倉儲, 所有第五組的組員均對此分組倉儲有管理權, 可以使用登入 Github 的帳號權限進行改版</span></div>
+<br/>
+<div><span>必須動態在 /home/runner/.ssh 下建立 id_rsa 與 config 連線設定, 各組組員才能利用 Replit 管理分組網站內容</span></div>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='利用 Github Codespaces 維護倉儲.html'>Next</a> >> 利用 Github Codespaces 維護倉儲</div>
 
     <!-- footer -->
       <div class="container">
