add w4 biog page

--- a/content/Replit 靜態網站檢視.html
+++ b/content/Replit 靜態網站檢視.html
@@ -142,11 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+    <div id="tipue_search_content">W4 << <a href='W4.html'>Previous</a> <a href='Replit 建立分組倉儲權限.html'>Next</a> >> Replit 建立分組倉儲權限<br /><h1>Replit 靜態網站檢視</h1>
+<div><span>main2.py 與 static.py, 只要在 Shell 執行 python3 main2.py 就可以執行倉儲內的靜態網站檢視. 另一方面, 若要取消先前執行 python3 main2.py, 只需要在 Shell 頁面按下 ctrl + c, c 代表 cancle 也就是取消,然後若要執行動態網站，可以在 Shell 執行 python3 main.py 或者使用 Replit 的 Run 按鍵.</span></div>
+<br />W4 << <a href='W4.html'>Previous</a> <a href='Replit 建立分組倉儲權限.html'>Next</a> >> Replit 建立分組倉儲權限</div>
 
     <!-- footer -->
       <div class="container">
