--- a/content/Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html
+++ b/content/Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html
@@ -142,11 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+    <div id="tipue_search_content">Replit 建立分組倉儲權限 << <a href='Replit 建立分組倉儲權限.html'>Previous</a> <a href='課後心得-2.html'>Next</a> >> 課後心得-2<br /><h1>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</h1>
+<div><span>說明如何在 Replit, Codespaces 與 Gitpod 維護並檢視網頁內容</span></div>
+<br />Replit 建立分組倉儲權限 << <a href='Replit 建立分組倉儲權限.html'>Previous</a> <a href='課後心得-2.html'>Next</a> >> 課後心得-2</div>
 
     <!-- footer -->
       <div class="container">
