--- a/content/心得-2.html
+++ b/content/心得-2.html
@@ -142,11 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+    <div id="tipue_search_content">常用的 git 指令 << <a href='常用的 git 指令.html'>Previous</a> <a href='W4.html'>Next</a> >> W4<br /><h1>心得-2</h1>
+<div><span>W3的課程學習到關於建立分組網站的操作以及利用上次所講的Codespaces來做分組網站的維護，建造分組網站後，需學習如何讓每個人都有權限去做帳號及內容管理，還有在程式中關於git的各種不同涵義的指令，在日後的內容新增及上傳的作用非常大。</span></div>
+</div>
+</div>
+</div>
+<br />常用的 git 指令 << <a href='常用的 git 指令.html'>Previous</a> <a href='W4.html'>Next</a> >> W4</div>
 
     <!-- footer -->
       <div class="container">
