--- a/content/Replit 建立分組倉儲權限.html
+++ b/content/Replit 建立分組倉儲權限.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,14 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>課後心得</h1>
-<p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
-<br />Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">Replit 靜態網站檢視 << <a href='Replit 靜態網站檢視.html'>Previous</a> <a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Next</a> >> Replit, Codespaces 與 Gitpod 執行動態與靜態網站<br /><h1>Replit 建立分組倉儲權限</h1>
+<div><span>由於 Replit 上的免費帳號僅允許與一個 Github 帳號對應, 因此若將分組網站 import 到 Replit, 必須自行在 /home/runner/.ssh 目錄下建立 id_rsa 與 config</span></div>
+<br/>
+<div><span>而 Host 的設定與 Windows putty 中的 session 名稱相同, 配合使用的 ssh 連線指令將會是:</span></div>
+<div><span>git clone --recurse-submodules git@github.com:mdewcm2024/ag5.git</span></div>
+<br/>
+<div><span>當使用者完成 /home/runner/.ssh 目錄中的 id_rsa 與 config 建立後,使用者必須將此兩個檔案存至隨身碟, 並在需要對分組倉儲改版時, 啟動分組倉儲的動態網站, 將隨身碟中的 id_rsa 與 config 檔案, upload 到分組倉儲的 downloads 目錄後, 再利用 ssh.py 的執行, 將 id_rsa 與 config 移動到 /home/runner/.ssh 目錄中. 也就是執行:python3 ssh.py</span></div>
+<br />Replit 靜態網站檢視 << <a href='Replit 靜態網站檢視.html'>Previous</a> <a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Next</a> >> Replit, Codespaces 與 Gitpod 執行動態與靜態網站</div>
 
     <!-- footer -->
       <div class="container">
