--- a/content/W4.html
+++ b/content/W4.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,12 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">常用的 git 指令 << <a href='常用的 git 指令.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>心得</h1>
-<div><span>W3的課程學習到關於建立分組網站的操作以及利用上次所講的Codespaces來做分組網站的維護，建造分組網站後，需學習如何讓每個人都有權限去做帳號及內容管理，還有在程式中關於git的各種不同涵義的指令，在日後的內容新增及上傳的作用非常大。</span></div>
-</div>
-</div>
-</div>
-<br />常用的 git 指令 << <a href='常用的 git 指令.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
+    <div id="tipue_search_content">心得-2 << <a href='心得-2.html'>Previous</a> <a href='Replit 靜態網站檢視.html'>Next</a> >> Replit 靜態網站檢視<br /><h1>W4</h1>
+<div>
+<div><span>wcm2024第四週課程,複習前三週的課程內容, 並且介紹 git 與 cmsimde 的相關用法</span></div>
+<br />心得-2 << <a href='心得-2.html'>Previous</a> <a href='Replit 靜態網站檢視.html'>Next</a> >> Replit 靜態網站檢視</div>
 
     <!-- footer -->
       <div class="container">
