--- a/content/常用的 git 指令.html
+++ b/content/常用的 git 指令.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得.html'>課後心得</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得.html'>心得</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用 Github Codespaces 維護倉儲 << <a href='利用 Github Codespaces 維護倉儲.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>常用的 git 指令</h1>
+    <div id="tipue_search_content">利用 Github Codespaces 維護倉儲 << <a href='利用 Github Codespaces 維護倉儲.html'>Previous</a> <a href='心得-2.html'>Next</a> >> 心得-2<br /><h1>常用的 git 指令</h1>
 <div><span>git 的新增、提交與推送指令:</span></div>
 <br/>
 <div><span>git add . git commit -m "說明字串" git push</span></div>
@@ -172,7 +172,7 @@ img.add_border {
 <div><span>若要取下帶有子模組的倉儲, 且可能該子模組還有設定其他子模組, 則必須要加上 --recurse-submodules:</span></div>
 <br/>
 <div><span>git clone --recurse-submodules 倉儲網址_協定.git 指定目錄與否</span></div>
-<br />利用 Github Codespaces 維護倉儲 << <a href='利用 Github Codespaces 維護倉儲.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
+<br />利用 Github Codespaces 維護倉儲 << <a href='利用 Github Codespaces 維護倉儲.html'>Previous</a> <a href='心得-2.html'>Next</a> >> 心得-2</div>
 
     <!-- footer -->
       <div class="container">
