--- a/content/心得-1.html
+++ b/content/心得-1.html
@@ -142,11 +142,14 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
+    <div id="tipue_search_content">利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>心得-1</h1>
+<div><span>W2的課程讓我學到很多新的東西以及複習舊知識</span></div>
+<div>新:能夠再Github中使用Codespace直接將動態網站上編輯好的東西push到靜態網站上，使用Codespace能夠同時查看到動態與靜態的變化，使我更加方便。</div>
+<div><span>舊:更改個人網站標題，在之前上學期的課程中有學習過<br/></span></div>
+</div>
 <div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+<div><span></span></div>
+</div><br />利用 Codespaces 維護網站 << <a href='利用 Codespaces 維護網站.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
 
     <!-- footer -->
       <div class="container">
