--- a/content/課後心得-1.html
+++ b/content/課後心得-1.html
@@ -142,11 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+    <div id="tipue_search_content">Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>課後心得-1</h1>
+<p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
+<br />Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
 
     <!-- footer -->
       <div class="container">
