--- a/content/課後心得-2.html
+++ b/content/課後心得-2.html
@@ -142,11 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1<br /><h1>利用 Codespaces 維護網站</h1>
-<div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
-<div><span>能夠同時開啟靜態網站與動態網站</span></div>
-<div>
-<br />利用Replit修改個人網站標題 << <a href='利用Replit修改個人網站標題.html'>Previous</a> <a href='心得-1.html'>Next</a> >> 心得-1</div>
+    <div id="tipue_search_content">Replit, Codespaces 與 Gitpod 執行動態與靜態網站 << <a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>課後心得-2</h1>
+<div><span>這週w4的學習內容開始變多，但很多東西都是前一堂課老師有先幫我們預習下一次要講的內容，所以才不會那麼吃力，操作內容也慢慢變多，希望下次我能跟得上，透過分組網站，讓我和我的同學一起思考，解決方法，感覺真好。</span></div>
+</div>
+<br />Replit, Codespaces 與 Gitpod 執行動態與靜態網站 << <a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
