--- a/content/Git 如何解決產品設計問題.html
+++ b/content/Git 如何解決產品設計問題.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,12 +142,26 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online<br /><h1>w1</h1>
-<div>
-<div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
-</div>
-<div>
-<br />課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online</div>
+    <div id="tipue_search_content">Git 歷史與希望解決的問題 << <a href='Git 歷史與希望解決的問題.html'>Previous</a> <a href='從 git init 到 git push.html'>Next</a> >> 從 git init 到 git push<br /><h1>Git 如何解決產品設計問題</h1>
+<div><span>Git 在產品設計領域的應用可以幫助解決多個問題，主要集中在版本控制、協作和追蹤變更等方面：</span></div>
+<br/>
+<div><span>1.版本控制：</span></div>
+<div><span>在產品設計中，通常涉及多個版本和修訂。Git 提供了強大的版本控制功能，可以跟蹤和管理設計文檔、原型、測試文檔等的各個版本。這使得設計師和工程師可以隨時回溯到先前的版本，查看和比較修改，從而更好地管理設計的進展和變更。</span></div>
+<br/>
+<div><span>2.分支管理：</span></div>
+<div><span>設計過程中常常需要同時進行多個功能性和版本間的開發。Git 的分支管理能力讓團隊可以同時進行多個獨立的工作流程，每個分支可以專注於不同的設計方向或功能，而不會互相干擾。這使得設計團隊可以更靈活地進行實驗、測試新功能和快速迭代。</span></div>
+<br/>
+<div><span>3.協作和共享：</span></div>
+<div><span>Git 提供了有效的協作機制，團隊成員可以同時編輯和修改設計文檔，Git 能夠管理並合併這些修改，從而避免了不同版本之間的衝突和混亂。此外，Git 的分佈式特性使得每個團隊成員都能夠在本地操作和提交變更，而不依賴於單一的中央伺服器，這在多地點和跨地域的團隊合作中尤其重要。</span></div>
+<br/>
+<div><span>4.追蹤和管理變更：</span></div>
+<div><span>Git 讓設計團隊能夠清楚地追蹤每個變更的來源和原因，每一個提交都可以</span></div>
+<br/>
+<div><span>準確記錄誰做了什麼修改，這樣可以在需要時輕鬆回溯和解決問題。這種細緻的變更追蹤和管理有助於保持設計文檔的整潔和準確性，同時提升團隊的工作效率和協作品質。</span></div>
+<br/>
+<div><span>總結來說，Git 在產品設計中的應用不僅使得版本控制更加靈活和高效，還能夠有效管理多人協作、追蹤變更，從而提升整個設計過程的效率和品質。</span></div>
+<br/>
+<br />Git 歷史與希望解決的問題 << <a href='Git 歷史與希望解決的問題.html'>Previous</a> <a href='從 git init 到 git push.html'>Next</a> >> 從 git init 到 git push</div>
 
     <!-- footer -->
       <div class="container">
