--- a/content/Git 歷史與希望解決的問題.html
+++ b/content/Git 歷史與希望解決的問題.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,12 +142,31 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online<br /><h1>w1</h1>
-<div>
-<div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
-</div>
-<div>
-<br />課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online</div>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='Git 如何解決產品設計問題.html'>Next</a> >> Git 如何解決產品設計問題<br /><h1>Git 歷史與希望解決的問題</h1>
+<div><span>A1 請簡述一下 Git 的發展歷史, 以及當時的背景如何?A2 Git 想要解決甚麼問題?</span></div>
+<br/>
+<div><span>A1:Git 的發展歷史可以追溯到2005年，由Linux之父Linus Torvalds開始開發。當時的背景是開源軟體社群中版本控制系統的需求日益迫切。</span></div>
+<br/>
+<div><span>背景:</span></div>
+<div><span>在2005年之前，許多開源專案使用的主流版本控制系統是「BitKeeper」。然而，由於一些爭議和授權問題，Linux內核開發社群失去了對BitKeeper的免費使用權。這迫使Linux社群尋找一個新的、自由開源的版本控制系統來替代BitKeeper，這也促成了Git的誕生。</span></div>
+<br/>
+<div><span>A2:Git 的解決問題：</span></div>
+<br/>
+<div><span>1.分散式版本控制：</span></div>
+<div><span>Git 的主要目標是解決分散團隊協作的版本控制問題。傳統的中央化版本控制系統（如CVS和Subversion）需要依賴單一的中央伺服器來管理代碼版本，這對於全球分佈的開發團隊來說效率可能不高，而且伺服器單點故障也會影響所有人的工作。</span></div>
+<br/>
+<div><span>2.速度和效能：</span></div>
+<div><span>Git 被設計成非常快速和高效。它使用了一些先進的技術，如對象存儲、分支管理和快照機制，使得大型項目的版本控制操作變得更加高效和可靠。</span></div>
+<br/>
+<div><span>3.強大的分支支持：</span></div>
+<div><span>Git 提供了強大的分支管理功能，這使得開發者可以輕鬆地創建、合併和管理分支。這對於同時進行多個功能開發、修復問題和測試新想法的開發團隊來說至關重要。</span></div>
+<br/>
+<div><span>4.本地化操作：</span></div>
+<div><span>Git 讓每個開發者都擁有完整的倉庫歷史記錄的副本，這意味著可以在離線狀態下進行操作。這樣的本地化操作使得開發者在不同地點、時間和網路環境下都能夠持續工作。</span></div>
+<br/>
+<div><span>總的來說，Git 的誕生不僅是為了滿足Linux內核開發的具體需求，也因為它解決了當時許多開發團隊普遍面臨的版本控制問題，並且提供了更先進、更靈活和更高效的解決方案，這使得它迅速成為了全球開發者社群的首選版本控制系統。</span></div>
+<br/>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='Git 如何解決產品設計問題.html'>Next</a> >> Git 如何解決產品設計問題</div>
 
     <!-- footer -->
       <div class="container">
