--- a/config/content.htm
+++ b/config/content.htm
@@ -193,7 +193,88 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>透過Chat Gpt的回答才得以讓我了解這些，他回答的內容很多，但我必須透過自己篩選及判斷拿取對我來說有用的訊息，現代社會很多都是靠AI來做學習，這對我們來說不是一件壞事，但我們也必須有能夠判斷的能力，不能夠凡事都相信AI，否則自己會迷失方向。<br/></span></div>
 <div>
 <h2>W6</h2>
-<p></p>
+<div>
+<div><span>說明如何透過與 ChatGPT 的對話, 了解有關 git 在不同專業領域的應用方法</span></div>
+</div>
+<div>
+<h3><span>Git 歷史與希望解決的問題</span></h3>
+<div><span>A1 請簡述一下 Git 的發展歷史, 以及當時的背景如何?A2 Git 想要解決甚麼問題?</span></div>
+<br/>
+<div><span>A1:Git 的發展歷史可以追溯到2005年，由Linux之父Linus Torvalds開始開發。當時的背景是開源軟體社群中版本控制系統的需求日益迫切。</span></div>
+<br/>
+<div><span>背景:</span></div>
+<div><span>在2005年之前，許多開源專案使用的主流版本控制系統是「BitKeeper」。然而，由於一些爭議和授權問題，Linux內核開發社群失去了對BitKeeper的免費使用權。這迫使Linux社群尋找一個新的、自由開源的版本控制系統來替代BitKeeper，這也促成了Git的誕生。</span></div>
+<br/>
+<div><span>A2:Git 的解決問題：</span></div>
+<br/>
+<div><span>1.分散式版本控制：</span></div>
+<div><span>Git 的主要目標是解決分散團隊協作的版本控制問題。傳統的中央化版本控制系統（如CVS和Subversion）需要依賴單一的中央伺服器來管理代碼版本，這對於全球分佈的開發團隊來說效率可能不高，而且伺服器單點故障也會影響所有人的工作。</span></div>
+<br/>
+<div><span>2.速度和效能：</span></div>
+<div><span>Git 被設計成非常快速和高效。它使用了一些先進的技術，如對象存儲、分支管理和快照機制，使得大型項目的版本控制操作變得更加高效和可靠。</span></div>
+<br/>
+<div><span>3.強大的分支支持：</span></div>
+<div><span>Git 提供了強大的分支管理功能，這使得開發者可以輕鬆地創建、合併和管理分支。這對於同時進行多個功能開發、修復問題和測試新想法的開發團隊來說至關重要。</span></div>
+<br/>
+<div><span>4.本地化操作：</span></div>
+<div><span>Git 讓每個開發者都擁有完整的倉庫歷史記錄的副本，這意味著可以在離線狀態下進行操作。這樣的本地化操作使得開發者在不同地點、時間和網路環境下都能夠持續工作。</span></div>
+<br/>
+<div><span>總的來說，Git 的誕生不僅是為了滿足Linux內核開發的具體需求，也因為它解決了當時許多開發團隊普遍面臨的版本控制問題，並且提供了更先進、更靈活和更高效的解決方案，這使得它迅速成為了全球開發者社群的首選版本控制系統。</span></div>
+<br/>
+<h3><span>Git 如何解決產品設計問題</span></h3>
+<div><span>Git 在產品設計領域的應用可以幫助解決多個問題，主要集中在版本控制、協作和追蹤變更等方面：</span></div>
+<br/>
+<div><span>1.版本控制：</span></div>
+<div><span>在產品設計中，通常涉及多個版本和修訂。Git 提供了強大的版本控制功能，可以跟蹤和管理設計文檔、原型、測試文檔等的各個版本。這使得設計師和工程師可以隨時回溯到先前的版本，查看和比較修改，從而更好地管理設計的進展和變更。</span></div>
+<br/>
+<div><span>2.分支管理：</span></div>
+<div><span>設計過程中常常需要同時進行多個功能性和版本間的開發。Git 的分支管理能力讓團隊可以同時進行多個獨立的工作流程，每個分支可以專注於不同的設計方向或功能，而不會互相干擾。這使得設計團隊可以更靈活地進行實驗、測試新功能和快速迭代。</span></div>
+<br/>
+<div><span>3.協作和共享：</span></div>
+<div><span>Git 提供了有效的協作機制，團隊成員可以同時編輯和修改設計文檔，Git 能夠管理並合併這些修改，從而避免了不同版本之間的衝突和混亂。此外，Git 的分佈式特性使得每個團隊成員都能夠在本地操作和提交變更，而不依賴於單一的中央伺服器，這在多地點和跨地域的團隊合作中尤其重要。</span></div>
+<br/>
+<div><span>4.追蹤和管理變更：</span></div>
+<div><span>Git 讓設計團隊能夠清楚地追蹤每個變更的來源和原因，每一個提交都可以</span></div>
+<br/>
+<div><span>準確記錄誰做了什麼修改，這樣可以在需要時輕鬆回溯和解決問題。這種細緻的變更追蹤和管理有助於保持設計文檔的整潔和準確性，同時提升團隊的工作效率和協作品質。</span></div>
+<br/>
+<div><span>總結來說，Git 在產品設計中的應用不僅使得版本控制更加靈活和高效，還能夠有效管理多人協作、追蹤變更，從而提升整個設計過程的效率和品質。</span></div>
+<br/>
+<h3><span>從 git init 到 git push</span></h3>
+<div><span>啟動近端可攜程式系統</span></div>
+<br/>
+<div><span>更換目錄至 y:\tmp 分別建立 gitproject\repository 與 gitserver\repository 目錄</span></div>
+<br/>
+<div><span>利用以下指令, 設定之後的 git init 將採用 main 作為內定主分支</span></div>
+<br/>
+<div><span>在 Y:\tmp\gitproject&gt; git config --global init.defaultBranch main</span></div>
+<br/>
+<div><span>進入 gitproject\repository 目錄, 新增一個目錄名稱為 repo1, 進入 repo1 後執行 git init</span></div>
+<br/>
+<div><span>進入 gitserver\repository 目錄, 新增一個目錄名稱為 repo1, 進入 repo1 後執行 git init --bare</span></div>
+<br/>
+<div><span>之後在 Y:\tmp\gitproject\repo1 目錄操作, 建立新檔案 README.md:</span></div>
+<br/>
+<div><span>echo "Hello, World!" &gt; README.md</span></div>
+<br/>
+<div><span>git add README.md</span></div>
+<br/>
+<div><span>git commit -m "Initial commit"</span></div>
+<br/>
+<div><span>git remote add origin y:\tmp\gitserver\repository\repo1</span></div>
+<br/>
+<div><span>git push -u origin main</span></div>
+<br/>
+<div><span>如此, 就可以將 Y:\tmp\gitproject\repo1 中的倉儲內容送到 Y:\tmp\gitserver\repository\repo1 目錄中. 之後請在 C:\tmp\repository&gt; 執行 git clone Y:\tmp\gitserver\repository\repo1, 由於沒有特別指令倉儲 clone 後的目錄名稱, 因此 git 會將 Y:\tmp\gitserver\repository\repo1 倉儲內容複製一份放入 C:\tmp\repository\repo1 目錄中.</span></div>
+<br/>
+<div><span>表示目前 Y:\tmp\gitserver\repository\repo1 伺服器中的 repo1, 已經分別存入 Y:\tmp\gitproject\repo1 與 C:\tmp\repository\repo1 目錄中, 使用者可以分別在這兩個倉儲中進行改版後, 在各自的倉儲資料中進行提交, 隨後再設法將改版內容 push 到 Y:\tmp\gitserver\repository\repo1 中進行合併.</span></div>
+<br/>
+<div><span>最後, 若要讓使用者跨網路存取 Windows 操作系統上的倉儲, 可以根據這裡的說明, 啟動伺服器:</span></div>
+<div><span>git daemon --reuseaddr --base-path=. --export-all --verbose</span></div>
+<div><span>然後利用 C:\tmp\repository&gt;git clone git://localhost/repo1 repo002 取下倉儲內容, 其中的 localhost 可以使用外部 IP 或對應的網路符號名稱.</span></div>
+<br/>
+<div><span>若要在 Windows 環境打造一個類似 Github 的網際環境, 可以採用 https://github.com/gogs/gogs, 其中包括網際資料庫 PostgreSQL 伺服器或 SQLite 的應用</span></div>
+</div>
 </div>
 </div>
 <h1>cmsimde</h1>
