--- a/content/從 git init 到 git push.html
+++ b/content/從 git init 到 git push.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,12 +142,44 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online<br /><h1>w1</h1>
-<div>
-<div><span>w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.</span></div>
+    <div id="tipue_search_content">Git 如何解決產品設計問題 << <a href='Git 如何解決產品設計問題.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>從 git init 到 git push</h1>
+<div><span>啟動近端可攜程式系統</span></div>
+<br/>
+<div><span>更換目錄至 y:\tmp 分別建立 gitproject\repository 與 gitserver\repository 目錄</span></div>
+<br/>
+<div><span>利用以下指令, 設定之後的 git init 將採用 main 作為內定主分支</span></div>
+<br/>
+<div><span>在 Y:\tmp\gitproject&gt; git config --global init.defaultBranch main</span></div>
+<br/>
+<div><span>進入 gitproject\repository 目錄, 新增一個目錄名稱為 repo1, 進入 repo1 後執行 git init</span></div>
+<br/>
+<div><span>進入 gitserver\repository 目錄, 新增一個目錄名稱為 repo1, 進入 repo1 後執行 git init --bare</span></div>
+<br/>
+<div><span>之後在 Y:\tmp\gitproject\repo1 目錄操作, 建立新檔案 README.md:</span></div>
+<br/>
+<div><span>echo "Hello, World!" &gt; README.md</span></div>
+<br/>
+<div><span>git add README.md</span></div>
+<br/>
+<div><span>git commit -m "Initial commit"</span></div>
+<br/>
+<div><span>git remote add origin y:\tmp\gitserver\repository\repo1</span></div>
+<br/>
+<div><span>git push -u origin main</span></div>
+<br/>
+<div><span>如此, 就可以將 Y:\tmp\gitproject\repo1 中的倉儲內容送到 Y:\tmp\gitserver\repository\repo1 目錄中. 之後請在 C:\tmp\repository&gt; 執行 git clone Y:\tmp\gitserver\repository\repo1, 由於沒有特別指令倉儲 clone 後的目錄名稱, 因此 git 會將 Y:\tmp\gitserver\repository\repo1 倉儲內容複製一份放入 C:\tmp\repository\repo1 目錄中.</span></div>
+<br/>
+<div><span>表示目前 Y:\tmp\gitserver\repository\repo1 伺服器中的 repo1, 已經分別存入 Y:\tmp\gitproject\repo1 與 C:\tmp\repository\repo1 目錄中, 使用者可以分別在這兩個倉儲中進行改版後, 在各自的倉儲資料中進行提交, 隨後再設法將改版內容 push 到 Y:\tmp\gitserver\repository\repo1 中進行合併.</span></div>
+<br/>
+<div><span>最後, 若要讓使用者跨網路存取 Windows 操作系統上的倉儲, 可以根據這裡的說明, 啟動伺服器:</span></div>
+<div><span>git daemon --reuseaddr --base-path=. --export-all --verbose</span></div>
+<div><span>然後利用 C:\tmp\repository&gt;git clone git://localhost/repo1 repo002 取下倉儲內容, 其中的 localhost 可以使用外部 IP 或對應的網路符號名稱.</span></div>
+<br/>
+<div><span>若要在 Windows 環境打造一個類似 Github 的網際環境, 可以採用 https://github.com/gogs/gogs, 其中包括網際資料庫 PostgreSQL 伺服器或 SQLite 的應用</span></div>
 </div>
-<div>
-<br />課程內容及課後心得 << <a href='課程內容及課後心得.html'>Previous</a> <a href='登入 MS Online.html'>Next</a> >> 登入 MS Online</div>
+</div>
+</div>
+<br />Git 如何解決產品設計問題 << <a href='Git 如何解決產品設計問題.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
