--- a/content/從教育的本質看課程內容.html
+++ b/content/從教育的本質看課程內容.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,9 +142,11 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>First</h1>
-<div>
-<br /> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">W8 << <a href='W8.html'>Previous</a> <a href='心得-3.html'>Next</a> >> 心得-3<br /><h1>從教育的本質看課程內容</h1>
+<div><span>理查德.萊文在某畢業典禮上所闡述的觀點:大學不應僅僅提供專業知識和技能，而應培養對學生的渴望和對世界的好奇心，如果畢業生在畢業後具有特定的專業知識和技能，那反應大學的是失敗，學生應該在畢業後根據自己德興去來追求事物。</span></div>
+<br/>
+<div><span>他也鼓勵學生探索不同學科及科目的廣泛教育重要性，促進智識好奇心及批判性思維，不僅僅專注於專業知識，也強調大學培養學生的智識能力、創造力和領導能力，不僅僅是學術成就與榮譽。</span></div>
+<br />W8 << <a href='W8.html'>Previous</a> <a href='心得-3.html'>Next</a> >> 心得-3</div>
 
     <!-- footer -->
       <div class="container">
