--- a/content/心得-3.html
+++ b/content/心得-3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,9 +142,17 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>First</h1>
-<div>
-<br /> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">從教育的本質看課程內容 << <a href='從教育的本質看課程內容.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>心得-3</h1>
+<div><span>這堂課的內容讓我認識了一位經濟學家，他所認為的教育跟我已往聽到的教育不太一樣，他的教育是以找到學生的興趣去做教育並且啟發更多的發展價值，而不單單僅限於一個能力去侷限了自己能做的更多事，聽完他的話後我覺得很有道理，我想作為學生的我也應該好好的思考自己的教育了。</span></div>
+</div>
+</div>
+</div>
+<div></div>
+</div>
+</div>
+</div>
+</div>
+<br />從教育的本質看課程內容 << <a href='從教育的本質看課程內容.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
