--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -274,6 +274,13 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>然後利用 C:\tmp\repository&gt;git clone git://localhost/repo1 repo002 取下倉儲內容, 其中的 localhost 可以使用外部 IP 或對應的網路符號名稱.</span></div>
 <br/>
 <div><span>若要在 Windows 環境打造一個類似 Github 的網際環境, 可以採用 https://github.com/gogs/gogs, 其中包括網際資料庫 PostgreSQL 伺服器或 SQLite 的應用</span></div>
+<div>
+<h2>W8</h2>
+<div>
+<div><span>從教育的本質看網際內容管理課程的內容要點</span></div>
+</div>
+<div></div>
+</div>
 </div>
 </div>
 </div>
