add 課程期中整理 網站頁面

--- a/config/content.htm
+++ b/config/content.htm
@@ -286,10 +286,23 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>他也鼓勵學生探索不同學科及科目的廣泛教育重要性，促進智識好奇心及批判性思維，不僅僅專注於專業知識，也強調大學培養學生的智識能力、創造力和領導能力，不僅僅是學術成就與榮譽。</span></div>
 <h3><span>心得</span></h3>
 <div><span>這堂課的內容讓我認識了一位經濟學家，他所認為的教育跟我已往聽到的教育不太一樣，他的教育是以找到學生的興趣去做教育並且啟發更多的發展價值，而不單單僅限於一個能力去侷限了自己能做的更多事，聽完他的話後我覺得很有道理，我想作為學生的我也應該好好的思考自己的教育了。</span></div>
+<h2><span>課程期中心得</span></h2>
 </div>
 </div>
 </div>
-<div></div>
+<div>
+<div>
+<h3><span>網頁式內容管理</span></h3>
+<p><span></span></p>
+<h3><span>Python 程式系統</span></h3>
+<p><span></span></p>
+<h3><span>網頁上的 IDE</span></h3>
+<p><span></span></p>
+<h3><span>AI 工具</span></h3>
+<p><span></span></p>
+<h3><span>實作練習問題</span></h3>
+</div>
+</div>
 </div>
 </div>
 </div>
