--- a/content/Python 程式系統.html
+++ b/content/Python 程式系統.html
@@ -142,11 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站<br /><h1>利用Replit修改個人網站標題</h1>
-<div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
-<div><span>1.登入Replit</span></div>
-<div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
-<br />確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站</div>
+    <div id="tipue_search_content">網頁式內容管理 << <a href='網頁式內容管理.html'>Previous</a> <a href='網頁上的 IDE.html'>Next</a> >> 網頁上的 IDE<br /><h1>Python 程式系統</h1>
+<p><span></span></p>
+<br />網頁式內容管理 << <a href='網頁式內容管理.html'>Previous</a> <a href='網頁上的 IDE.html'>Next</a> >> 網頁上的 IDE</div>
 
     <!-- footer -->
       <div class="container">
