--- a/content/課程期中心得.html
+++ b/content/課程期中心得.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,11 +142,13 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站<br /><h1>利用Replit修改個人網站標題</h1>
-<div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
-<div><span>1.登入Replit</span></div>
-<div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
-<br />確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站</div>
+    <div id="tipue_search_content">心得-3 << <a href='心得-3.html'>Previous</a> <a href='網頁式內容管理.html'>Next</a> >> 網頁式內容管理<br /><h1>課程期中心得</h1>
+</div>
+</div>
+</div>
+<div>
+<div>
+<br />心得-3 << <a href='心得-3.html'>Previous</a> <a href='網頁式內容管理.html'>Next</a> >> 網頁式內容管理</div>
 
     <!-- footer -->
       <div class="container">
